force-app/main/default/objects/LATAM__c/fields/Make_a_Tenant_Lease_F__c.field-meta.xml
<CustomField>
    <fullName>Make_a_Tenant_Lease_F__c</fullName>
    <label>Make a Tenant Lease (F)</label>
    <type>Date</type>
</CustomField>