force-app/main/default/objects/LATAM__c/fields/Negotiate_candidate_A__c.field-meta.xml
<CustomField>
    <fullName>Negotiate_candidate_A__c</fullName>
    <label>Negotiate candidate (A)</label>
    <type>Date</type>
</CustomField>