force-app/main/default/objects/LATAM__c/fields/Negotiate_candidate_F__c.field-meta.xml
<CustomField>
    <fullName>Negotiate_candidate_F__c</fullName>
    <label>Negotiate candidate (F)</label>
    <type>Date</type>
</CustomField>