force-app/main/default/objects/LATAM__c/fields/Negotiate_with_Landlord_A__c.field-meta.xml
<CustomField>
    <fullName>Negotiate_with_Landlord_A__c</fullName>
    <label>Negotiate with Landlord (A)</label>
    <type>Date</type>
</CustomField>