force-app/main/default/objects/LATAM__c/fields/Negotiate_with_Landlord_F__c.field-meta.xml
<CustomField>
    <fullName>Negotiate_with_Landlord_F__c</fullName>
    <label>Negotiate with Landlord (F)</label>
    <type>Date</type>
</CustomField>