force-app/main/default/objects/LATAM__c/fields/Negotiation_Add_l_Space_w_Landlord_A__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Add_l_Space_w_Landlord_A__c</fullName>
    <label>Negotiation Add&apos;l Space w/Landlord (A)</label>
    <type>Date</type>
</CustomField>