force-app/main/default/objects/LATAM__c/fields/NTP_Engineering_A__c.field-meta.xml
<CustomField>
    <fullName>NTP_Engineering_A__c</fullName>
    <label>NTP Engineering (A)</label>
    <type>Date</type>
</CustomField>