force-app/main/default/objects/LATAM__c/fields/NTP_Engineering_F__c.field-meta.xml
<CustomField>
    <fullName>NTP_Engineering_F__c</fullName>
    <label>NTP Engineering (F)</label>
    <type>Date</type>
</CustomField>