force-app/main/default/objects/LATAM__c/fields/Operations_Receives_the_Site_F__c.field-meta.xml
<CustomField>
    <fullName>Operations_Receives_the_Site_F__c</fullName>
    <label>Operations Receives the Site (F)</label>
    <type>Date</type>
</CustomField>