force-app/main/default/objects/LATAM__c/fields/Permits_F__c.field-meta.xml
<CustomField>
    <fullName>Permits_F__c</fullName>
    <label>Permits (F)</label>
    <type>Date</type>
</CustomField>