force-app/main/default/objects/LATAM__c/fields/Permits_NTP_A__c.field-meta.xml
<CustomField>
    <fullName>Permits_NTP_A__c</fullName>
    <label>Permits NTP (A)</label>
    <type>Date</type>
</CustomField>