force-app/main/default/objects/LATAM__c/fields/Permits_NTP_F__c.field-meta.xml
<CustomField>
    <fullName>Permits_NTP_F__c</fullName>
    <label>Permits NTP (F)</label>
    <type>Date</type>
</CustomField>