force-app/main/default/objects/LATAM__c/fields/Permits_Risk_Matrix_sent_to_client_F__c.field-meta.xml
<CustomField>
    <fullName>Permits_Risk_Matrix_sent_to_client_F__c</fullName>
    <label>Permits Risk Matrix sent to client (F)</label>
    <type>Date</type>
</CustomField>