force-app/main/default/objects/LATAM__c/fields/Plan_Final_A__c.field-meta.xml
<CustomField>
    <fullName>Plan_Final_A__c</fullName>
    <label>Plan Final (A)</label>
    <type>Date</type>
</CustomField>