force-app/main/default/objects/LATAM__c/fields/Plan_Final_F__c.field-meta.xml
<CustomField>
    <fullName>Plan_Final_F__c</fullName>
    <label>Plan Final (F)</label>
    <type>Date</type>
</CustomField>