force-app/main/default/objects/LATAM__c/fields/Plan_Start_A__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_A__c</fullName>
    <label>Plan Start (A)</label>
    <type>Date</type>
</CustomField>