force-app/main/default/objects/LATAM__c/fields/Plan_Start_F__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_F__c</fullName>
    <label>Plan Start (F)</label>
    <type>Date</type>
</CustomField>