force-app/main/default/objects/LATAM__c/fields/Pre_Factibility_acceptance_rejection_A__c.field-meta.xml
<CustomField>
    <fullName>Pre_Factibility_acceptance_rejection_A__c</fullName>
    <label>Pre Factibility acceptance/rejection (A)</label>
    <type>Date</type>
</CustomField>