force-app/main/default/objects/LATAM__c/fields/Preliminary_A_Es_sent_to_client_A__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_A_Es_sent_to_client_A__c</fullName>
    <label>Preliminary A&amp;Es sent to client (A)</label>
    <type>Date</type>
</CustomField>