force-app/main/default/objects/LATAM__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>LATAM</relationshipLabel>
    <relationshipName>LATAM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>