force-app/main/default/objects/LATAM__c/fields/Provider_Amount_Quote__c.field-meta.xml
<CustomField>
    <fullName>Provider_Amount_Quote__c</fullName>
    <label>Provider Amount Quote</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>