force-app/main/default/objects/LATAM__c/fields/Provider_Delivery_Report__c.field-meta.xml
<CustomField>
    <fullName>Provider_Delivery_Report__c</fullName>
    <label>Provider Delivery Report</label>
    <type>Date</type>
</CustomField>