force-app/main/default/objects/LATAM__c/fields/Punchlist_Cleared_A__c.field-meta.xml
<CustomField>
    <fullName>Punchlist_Cleared_A__c</fullName>
    <label>Punchlist Cleared (A)</label>
    <type>Date</type>
</CustomField>