force-app/main/default/objects/LATAM__c/fields/Punchlist_Cleared_F__c.field-meta.xml
<CustomField>
    <fullName>Punchlist_Cleared_F__c</fullName>
    <label>Punchlist Cleared (F)</label>
    <type>Date</type>
</CustomField>