force-app/main/default/objects/LATAM__c/fields/Purchase_Order_Release_Time__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Release_Time__c</fullName>
    <label>Purchase Order Release Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>