force-app/main/default/objects/LATAM__c/fields/Purchase_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Status__c</fullName>
    <label>Purchase Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>