force-app/main/default/objects/LATAM__c/fields/Quote_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Quote_Authorization__c</fullName>
    <label>Quote Authorization</label>
    <type>Date</type>
</CustomField>