force-app/main/default/objects/LATAM__c/fields/Quote_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Quote_Delivery__c</fullName>
    <label>Quote Delivery</label>
    <type>Date</type>
</CustomField>