force-app/main/default/objects/LATAM__c/fields/Quote_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Quote_Received_A__c</fullName>
    <label>Quote Received (A)</label>
    <type>Date</type>
</CustomField>