force-app/main/default/objects/LATAM__c/fields/Quote_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Quote_Received_F__c</fullName>
    <label>Quote Received (F)</label>
    <type>Date</type>
</CustomField>