force-app/main/default/objects/LATAM__c/fields/Quote_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Date__c</fullName>
    <label>Quote Request Date</label>
    <type>Date</type>
</CustomField>