force-app/main/default/objects/LATAM__c/fields/Quote_Validation__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validation__c</fullName>
    <label>Quote Validation</label>
    <type>Date</type>
</CustomField>