force-app/main/default/objects/LATAM__c/fields/Quote_Validation_A__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validation_A__c</fullName>
    <label>Quote Validation (A)</label>
    <type>Date</type>
</CustomField>