force-app/main/default/objects/LATAM__c/fields/Quote_Validation_F__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validation_F__c</fullName>
    <label>Quote Validation (F)</label>
    <type>Date</type>
</CustomField>