force-app/main/default/objects/LATAM__c/fields/Report_Validation_Time__c.field-meta.xml
<CustomField>
    <fullName>Report_Validation_Time__c</fullName>
    <label>Report Validation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>