force-app/main/default/objects/LATAM__c/fields/Request_for_Quote_A__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Quote_A__c</fullName>
    <label>Request for Quote (A)</label>
    <type>Date</type>
</CustomField>