force-app/main/default/objects/LATAM__c/fields/RF_Validation_A__c.field-meta.xml
<CustomField>
    <fullName>RF_Validation_A__c</fullName>
    <label>RF Validation (A)</label>
    <type>Date</type>
</CustomField>