force-app/main/default/objects/LATAM__c/fields/RF_Validation_F__c.field-meta.xml
<CustomField>
    <fullName>RF_Validation_F__c</fullName>
    <label>RF Validation (F)</label>
    <type>Date</type>
</CustomField>