force-app/main/default/objects/LATAM__c/fields/RFI_Client_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>RFI_Client_Approved_A__c</fullName>
    <label>RFI Client Approved (A)</label>
    <type>Date</type>
</CustomField>