force-app/main/default/objects/LATAM__c/fields/RFI_Client_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>RFI_Client_Approved_F__c</fullName>
    <label>RFI Client Approved (F)</label>
    <type>Date</type>
</CustomField>