force-app/main/default/objects/LATAM__c/fields/RFI_Notification_A__c.field-meta.xml
<CustomField>
    <fullName>RFI_Notification_A__c</fullName>
    <label>RFI Notification (A)</label>
    <type>Date</type>
</CustomField>