force-app/main/default/objects/LATAM__c/fields/RFI_Notification_F__c.field-meta.xml
<CustomField>
    <fullName>RFI_Notification_F__c</fullName>
    <label>RFI Notification (F)</label>
    <type>Date</type>
</CustomField>