force-app/main/default/objects/LATAM__c/fields/SAC_Request_A__c.field-meta.xml
<CustomField>
    <fullName>SAC_Request_A__c</fullName>
    <label>SAC Request (A)</label>
    <type>Date</type>
</CustomField>