force-app/main/default/objects/LATAM__c/fields/SAC_Request_F__c.field-meta.xml
<CustomField>
    <fullName>SAC_Request_F__c</fullName>
    <label>SAC Request (F)</label>
    <type>Date</type>
</CustomField>