force-app/main/default/objects/LATAM__c/fields/Search_Ring_Delivery_F__c.field-meta.xml
<CustomField>
    <fullName>Search_Ring_Delivery_F__c</fullName>
    <label>Search Ring Delivery (F)</label>
    <type>Date</type>
</CustomField>