force-app/main/default/objects/LATAM__c/fields/Select_Provider__c.field-meta.xml
<CustomField>
    <fullName>Select_Provider__c</fullName>
    <label>Select Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Juan Carlos Escalona Vigil</fullName>
            </value>
            <value>
                <fullName>Pmj Solutions S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Elara Comunicaciones S.A.De C.V.</fullName>
            </value>
            <value>
                <fullName>Edificaciones Cubica S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Signal Soluciones S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Gerardo Hiram Reyes Vizuet</fullName>
            </value>
            <value>
                <fullName>Arab Constructura S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Electrimex S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Ziva Construcciones Y Diseño S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Sac+2d Socios S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Teling Construction &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Gesscor Zero</fullName>
            </value>
            <value>
                <fullName>Cgs Ingenieria-Arquitectura</fullName>
            </value>
            <value>
                <fullName>Promanagement  | A2b</fullName>
            </value>
            <value>
                <fullName>Electromecanica Integral Y Sistemas De Ventilacion, Calefaccion Y Aire Acondicionado</fullName>
            </value>
            <value>
                <fullName>Grupo Igastsa</fullName>
            </value>
            <value>
                <fullName>Bioo Construcciones S.A. De C.V</fullName>
            </value>
            <value>
                <fullName>Oscar Ramirez Rivas</fullName>
            </value>
            <value>
                <fullName>Torres Y Servicios Tecnicos S.A. De C.V.</fullName>
            </value>
            <value>
                <fullName>Md Redes Soluciones Integrales</fullName>
            </value>
            <value>
                <fullName>Roberto Carlos Garcia</fullName>
            </value>
            <value>
                <fullName>CIRCULO EMUR S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>RESA ATRACCIÓN EMPRESARIAL S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>PROYECTOS JIMSA S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>EDIFICACIONES CÚBICA S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>HERIBERTO ALFARO COLLAZO</fullName>
            </value>
            <value>
                <fullName>CONRIVTEL S.A DE C.V.</fullName>
            </value>
            <value>
                <fullName>ANA GUADALUPE VIGIL ROMERO / ESHER CONSTRUCCIONES</fullName>
            </value>
            <value>
                <fullName>MARISOL RAMIREZ FLORES / DYR COMUNICACIONES</fullName>
            </value>
            <value>
                <fullName>INTRACSA S. DE R.L. DE C.V.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>