force-app/main/default/objects/LATAM__c/fields/Service_Comments__c.field-meta.xml
<CustomField>
    <fullName>Service_Comments__c</fullName>
    <label>Service Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>