force-app/main/default/objects/LATAM__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colocacion</fullName>
            </value>
            <value>
                <fullName>Correctivo Mayor</fullName>
            </value>
            <value>
                <fullName>Correctivo Menor</fullName>
            </value>
            <value>
                <fullName>Emergencia</fullName>
            </value>
            <value>
                <fullName>Preventivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>