force-app/main/default/objects/LATAM__c/fields/Shipping_Purchase_Order_A__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Purchase_Order_A__c</fullName>
    <label>Shipping Purchase Order (A)</label>
    <type>Date</type>
</CustomField>