force-app/main/default/objects/LATAM__c/fields/Shipping_Purchase_Order_F__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Purchase_Order_F__c</fullName>
    <label>Shipping Purchase Order (F)</label>
    <type>Date</type>
</CustomField>