force-app/main/default/objects/LATAM__c/fields/Site_Acceptance_Notification_A__c.field-meta.xml
<CustomField>
    <fullName>Site_Acceptance_Notification_A__c</fullName>
    <label>Site Acceptance Notification (A)</label>
    <type>Date</type>
</CustomField>