force-app/main/default/objects/LATAM__c/fields/Site_Acceptance_Notification_F__c.field-meta.xml
<CustomField>
    <fullName>Site_Acceptance_Notification_F__c</fullName>
    <label>Site Acceptance Notification (F)</label>
    <type>Date</type>
</CustomField>