force-app/main/default/objects/LATAM__c/fields/SR_acceptance_rejection_A__c.field-meta.xml
<CustomField>
    <fullName>SR_acceptance_rejection_A__c</fullName>
    <label>SR acceptance / rejection (A)</label>
    <type>Date</type>
</CustomField>