force-app/main/default/objects/LATAM__c/fields/Structural_Analysis_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Structural_Analysis_Ready_A__c</fullName>
    <label>Structural Analysis Ready (A)</label>
    <type>Date</type>
</CustomField>