force-app/main/default/objects/LATAM__c/fields/Structural_Analysis_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Structural_Analysis_Ready_F__c</fullName>
    <label>Structural Analysis Ready (F)</label>
    <type>Date</type>
</CustomField>