force-app/main/default/objects/LATAM__c/fields/Supplier_Report_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Report_Delivery_Time__c</fullName>
    <label>Supplier Report Delivery Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>