force-app/main/default/objects/LATAM__c/fields/Tech_Team_Visit_TTV_A__c.field-meta.xml
<CustomField>
    <fullName>Tech_Team_Visit_TTV_A__c</fullName>
    <label>Tech Team Visit (TTV) (A)</label>
    <type>Date</type>
</CustomField>