force-app/main/default/objects/LATAM__c/fields/Tech_Team_Visit_TTV_F__c.field-meta.xml
<CustomField>
    <fullName>Tech_Team_Visit_TTV_F__c</fullName>
    <label>Tech Team Visit (TTV) (F)</label>
    <type>Date</type>
</CustomField>