force-app/main/default/objects/LATAM__c/fields/Tenant_Lease_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Lease_Ready_A__c</fullName>
    <label>Tenant Lease Ready (A)</label>
    <type>Date</type>
</CustomField>