force-app/main/default/objects/LATAM__c/fields/Tenant_Lease_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Lease_Ready_F__c</fullName>
    <label>Tenant Lease Ready (F)</label>
    <type>Date</type>
</CustomField>