force-app/main/default/objects/LATAM__c/fields/Tenant_Lease_sent_to_client_F__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Lease_sent_to_client_F__c</fullName>
    <label>Tenant Lease sent to client (F)</label>
    <type>Date</type>
</CustomField>