force-app/main/default/objects/LATAM__c/fields/Tenant_Lease_sign_w_Client_NTP_Legal_A__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Lease_sign_w_Client_NTP_Legal_A__c</fullName>
    <label>Tenant Lease sign w/Client NTP Legal (A)</label>
    <type>Date</type>
</CustomField>