force-app/main/default/objects/LATAM__c/fields/Tenant_Lease_sign_w_Client_NTP_Legal_F__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Lease_sign_w_Client_NTP_Legal_F__c</fullName>
    <label>Tenant Lease sign w/Client NTP Legal (F)</label>
    <type>Date</type>
</CustomField>