force-app/main/default/objects/LATAM__c/fields/Terms_conditions_approved_A__c.field-meta.xml
<CustomField>
    <fullName>Terms_conditions_approved_A__c</fullName>
    <label>Terms &amp; conditions approved (A)</label>
    <type>Date</type>
</CustomField>