force-app/main/default/objects/LATAM__c/fields/Time_Response_Execution__c.field-meta.xml
<CustomField>
    <fullName>Time_Response_Execution__c</fullName>
    <label>Time Response Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>