force-app/main/default/objects/LATAM__c/fields/Total_OC__c.field-meta.xml
<CustomField>
    <fullName>Total_OC__c</fullName>
    <label>Total OC</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>