force-app/main/default/objects/LATAM__c/fields/Total_Quote__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote__c</fullName>
    <label>Total Quote</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>