force-app/main/default/objects/LATAM__c/fields/Tower_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Tower_Ready_A__c</fullName>
    <label>Tower Ready (A)</label>
    <type>Date</type>
</CustomField>