force-app/main/default/objects/LATAM__c/fields/Tower_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Tower_Ready_F__c</fullName>
    <label>Tower Ready (F)</label>
    <type>Date</type>
</CustomField>