force-app/main/default/objects/LATAM__c/fields/Tower_Reinforcement_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Tower_Reinforcement_Ready_F__c</fullName>
    <label>Tower Reinforcement Ready (F)</label>
    <type>Date</type>
</CustomField>