force-app/main/default/objects/LATAM__c/fields/TT_Status__c.field-meta.xml
<CustomField>
    <fullName>TT_Status__c</fullName>
    <label>TT Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>