force-app/main/default/objects/LATAM__c/fields/Tx_Validation_A__c.field-meta.xml
<CustomField>
    <fullName>Tx_Validation_A__c</fullName>
    <label>Tx Validation (A)</label>
    <type>Date</type>
</CustomField>