force-app/main/default/objects/LATAM__c/fields/Tx_Validation_F__c.field-meta.xml
<CustomField>
    <fullName>Tx_Validation_F__c</fullName>
    <label>Tx Validation (F)</label>
    <type>Date</type>
</CustomField>