force-app/main/default/objects/LATAM__c/fields/Type_of_cost__c.field-meta.xml
<CustomField>
    <fullName>Type_of_cost__c</fullName>
    <label>Type of cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>