force-app/main/default/objects/LATAM__c/fields/Uniti_Reprogram_Reason__c.field-meta.xml
<CustomField>
    <fullName>Uniti_Reprogram_Reason__c</fullName>
    <label>Uniti Reprogram Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>