force-app/main/default/objects/LATAM__c/fields/Upload_into_ODK_A__c.field-meta.xml
<CustomField>
    <fullName>Upload_into_ODK_A__c</fullName>
    <label>Upload into ODK (A)</label>
    <type>Date</type>
</CustomField>