force-app/main/default/objects/LATAM__c/fields/Upload_into_ODK_F__c.field-meta.xml
<CustomField>
    <fullName>Upload_into_ODK_F__c</fullName>
    <label>Upload into ODK (F)</label>
    <type>Date</type>
</CustomField>