force-app/main/default/objects/LATAM__c/fields/Validation_Activities_A__c.field-meta.xml
<CustomField>
    <fullName>Validation_Activities_A__c</fullName>
    <label>Validation Activities (A)</label>
    <type>Date</type>
</CustomField>