force-app/main/default/objects/LATAM__c/fields/Validation_Activities_F__c.field-meta.xml
<CustomField>
    <fullName>Validation_Activities_F__c</fullName>
    <label>Validation Activities (F)</label>
    <type>Date</type>
</CustomField>