force-app/main/default/objects/LATAM__c/fields/Validation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Validation_Comments__c</fullName>
    <label>Validation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>