force-app/main/default/objects/LATAM__c/fields/Validation_Report__c.field-meta.xml
<CustomField>
    <fullName>Validation_Report__c</fullName>
    <label>Validation Report</label>
    <type>Date</type>
</CustomField>