force-app/main/default/objects/LATAM__c/fields/Week_of_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Week_of_Work_Order__c</fullName>
    <label>Week of Work Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>